added cake images

--- a/about.html
+++ b/about.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>netlify hosting</title>
+    <title>cakes</title>
 </head>
 <body>
-    <h1>The Cake House</h1>
-    <a href="about.html">Visit various cakes</a>
+    
 </body>
 </html>
