Link about page

--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
     <title>cakes</title>
 </head>
 <body>
-    
+    <img src="images/cup-cake.jpeg" alt="cup-cake">
+    <img src="images/foam-cake.jpeg" alt="foam-cake">
+    <img src="images/pound-cake.jpg" alt="pound-cake">
 </body>
 </html>
