--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>The Cake House</h1>
-    <a href="about.html">Visit various cakes</a>
+    <a href="about.html">Visit cakes that which you want</a>
 </body>
 </html>
