some changes have done

--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
     <title>cakes</title>
 </head>
 <body>
-    <img src="images/cup-cake.jpeg" alt="cup-cake">
-    <img src="images/foam-cake.jpeg" alt="foam-cake">
-    <img src="images/pound-cake.jpg" alt="pound-cake">
+    <img src="images/cup-cake.jpeg " height="300px" width="300px" alt="cup-cake"><br>
+    <img src="images/foam-cake.jpeg" height="300px" width="300px" alt="foam-cake"><br>
+    <img src="images/pound-cake.jpg" height="300px" width="300px" alt="pound-cake><br>
 </body>
 </html>
