--- a/about.html
+++ b/about.html
@@ -8,6 +8,6 @@
 <body>
     <img src="images/cup-cake.jpeg " height="300px" width="300px" alt="cup-cake"><br>
     <img src="images/foam-cake.jpeg" height="300px" width="300px" alt="foam-cake"><br>
-    <img src="images/pound-cake.jpg" height="300px" width="300px" alt="pound-cake><br>
+    <img src="images/pound-cake.jpg" height="300px" width="300px" alt="pound-cake>
 </body>
 </html>
